# Lead_Genration

./: .gitignore  README.md
lead-generation-agent/: .env.example  api.py  main.py  pyproject.toml  setup_guide.md  test_api.py  test_ddg.py  test_email.py  test_filter.py  test_scrape.py  test_scraper.py  test_search.py  test_setup.py  test_writer.py
lead-generation-agent/src/graph/: state.py  workflow.py
lead-generation-agent/src/graph/nodes/: email_node.py  filter_node.py  scrape_node.py  search_node.py  write_node.py
lead-generation-agent/src/lead_generation_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
leadgenie-ai-agent/: App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  types.ts
leadgenie-ai-agent/components/: ICPForm.tsx  LeadCard.tsx
leadgenie-ai-agent/services/: geminiService.ts
